Add get_nhbr(n) thput bench for Neo4j